hard-gists/3725741/run.log
=== Docker Run Log for 3725741 ===
Started at: Mi 29. Okt 13:57:46 CET 2025

[2025-10-29 13:57:46] START: Running container for 3725741
[2025-10-29 13:57:46] SUCCESS: Container b92954ba31f651dcaaa5f06aaea165e541a94dfb2d0859da9bd323842167030b started for 3725741
=== Container logs for 3725741 ===
  File "/snippet.py", line 124
    print k, v
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3725741 ===
[2025-10-29 13:57:48] INFO: Container b92954ba31f651dcaaa5f06aaea165e541a94dfb2d0859da9bd323842167030b has stopped
